# coursework_3

./: .gitignore  README.md  database_example.ini  main.py  pyproject.toml  readme.md
src/: app_logger.py  config.py  db_manager.py  utils.py  vacancies.py
tests/: test_app_logger.py
