[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = ""
authors = ["Рыбина Лидия <lidiar@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openpyxl = "^3.1.5"
requests = "^2.32.5"
python-dotenv = "^1.2.1"
pytest = "^9.0.2"


[tool.poetry.group.types.dependencies]
types-requests = "^2.32.4.20250913"
types-openpyxl = "^3.1.5.20250919"
pandas-stubs = "^2.3.3.251219"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.isort]git push origin main
# максимальная длина строки
line_length = 119